# LoZ-Clone

./: .gitignore  README.md
src/: CMakeLists.txt  Entity.cpp  Entity.h  animatedsprite.cpp  animatedsprite.h  animation.cpp  animation.h  command.cpp  command.h  enemy.cpp  enemy.h  enemyManager.cpp  enemyManager.h  entityManager.cpp  entityManager.h  game.cpp  game.h  gameMenu.cpp  gameMenu.h  gui.cpp  gui.h  main.cpp  map.cpp  map.h  mapManager.cpp  mapManager.h  npc.cpp  npc.h  npcManager.cpp  npcManager.h  player.cpp  player.h  resouceManager.h  resourceManager.cpp  resourceManager.h
src/sublime scripts/: build exe.bat  rebuild cmake.bat  run.bat
